--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -56,6 +56,10 @@ body {
   position: absolute;
 }
 
+.svg-box {
+  display: none;
+}
+
 .card__text {
   display: flex;
   flex-direction: column;
@@ -127,4 +131,53 @@ body {
 .accordion__content:not(.active) {
   display: none;
   visibility: hidden;
+}
+
+@media (min-width: 1400px) {
+  .card {
+    max-width: 60%;
+    flex-direction: row;
+    position: relative;
+    background-image: url('../assets/images/bg-pattern-desktop.svg');
+    background-size: 50rem;
+    background-repeat: no-repeat;
+    background-position: -25rem -12rem;
+  }
+
+  .card__image,
+  .card__text {
+    flex: 1;
+    justify-content: center;
+  }
+
+  .card__image {
+    background-image: url('../assets/images/illustration-woman-online-desktop.svg');
+    background-position: -4rem 4rem;
+    background-repeat: no-repeat;
+  }
+
+  .woman-desktop-mobile {
+    display: none;
+  }
+
+  .svg-box {
+    display: block;
+    width: 12rem;
+    min-width: 12rem;
+    min-height: 12rem;
+    position: absolute;
+    top: 13rem;
+    left: -6rem;
+  }
+
+  .svg-shadow {
+    display: none;
+  }
+  .accordion {
+    margin-left: 0;
+  }
+  .title {
+    margin-top: 0;
+    text-align: left;
+  }
 }
