update media queries

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,7 @@ body {
   background: linear-gradient(var(--bg-gradient-violet), var(--bg-gradient-blue));
   font-family: var(--ff-primary);
   font-size: var(--fs-primary);
+  overflow-y: hidden;
 }
 
 .container {
