--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -184,14 +184,14 @@ body {
 
 @media (orientation: landscape) and (max-height: 480px) {
   .container {
-    background-color: red;
     overflow-y: hidden;
   }
   .card {
     min-height: 10rem;
     width: 90%;
     max-width: 90%;
-    max-height: 50%;
+    max-height: calc(100vh - 10%);
+    height: calc(100vh - 10%);
     flex-direction: row;
     position: relative;
     background-image: url('../assets/images/bg-pattern-desktop.svg');
