--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -179,9 +179,9 @@ body {
   }
 }
 
-@media (orientation: landscape) and (min-width: 800px) {
+@media (orientation: landscape) and (min-width: 400px) and (max-height: 480px) {
   body {
-    padding: 1rem;
+    padding-block: 1rem;
   }
 
   .card {
