--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -228,7 +228,7 @@ body {
   }
 }
 
-@media not all and (pointer: coarse) {
+@media (hover: none) {
   .accordion__question:hover {
     color: var(--clr-activeState-header);
   }
